--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	
 		<p> You will be given a random number at the start of the game. </p>
 		<p> There are four crystals below. By clicking on a crystal you will add a specific amount of points to your total score.</p>
-		<p> You win the game by matching your total score to the random number assigned at the beginning of the game. YOu lose the game if your total score goes above the random number. </p>
+		<p> You win the game by matching your total score to the random number assigned at the beginning of the game. You lose the game if your total score goes above the random number. </p>
 		<p> The value of each crystal is hidden. </p>
 		<p> Each time the game starts, the value of the each crystal will change to a new random number. </p>
 	
