--- a/index.html
+++ b/index.html
@@ -1,48 +1,72 @@
 <!DOCTYPE html>
 <html lang="en-us">
+
 <head>
+
 	<title> Crystal Game | Eva King </title>
+	<script type="text/JavaScript" src="assets/javascript/jquery-3.2.1.js"></script>
+	<script type="text/JavaScript" src="assets/javascript/game.js"></script>
+	<link rel="stylesheetReset" type="text/css" href="assets/css/reset.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Cherry+Swash:700" rel="stylesheet">
+
+
 </head>
+
 <body>
 
 	<h1> Crystal Collector </h1>
 
-	<div id="instructions">
-	
-		<p> You will be given a random number at the start of the game. </p>
-		<p> There are four crystals below. By clicking on a crystal you will add a specific amount of points to your total score.</p>
-		<p> You win the game by matching your total score to the random number assigned at the beginning of the game. You lose the game if your total score goes above the random number. </p>
-		<p> The value of each crystal is hidden. </p>
-		<p> Each time the game starts, the value of the each crystal will change to a new random number. </p>
-	
-	</div>
-		
-	<div id="compRanNum">
+	<div class="mainDiv">
 
-	</div>
+		<div id="instructions">
 
-	<div id="winLossCounter">
-		
-	</div>
+			<p> You will be given a random number at the start of the game. </p>
+			<p> There are four crystals below. By clicking on a crystal you will add a specific amount of points to your total score.</p>
+			<p> You win the game by matching your total score to the random number assigned at the beginning of the game. You lose the game if your total score goes above the random number. </p>
+			<p> The value of each crystal is hidden. </p>
+			<p> Each time the game starts, the value of the each crystal will change to a new random number. </p>
 
-	<div id="crystals">
-		<img id="blueCrystal" src="assets/images/blueCrystal.png" alt=" Blue Crystal ">
-		<img id="greenCrystal" src="assets/images/greenCrystal.png" alt=" Green Crystal ">
-		<img id="purpleCrystal" src="assets/images/purpleCrystal.png" alt=" Purple Crystal ">
-		<img id="yellowCrystal" src="assets/images/yellowCrystal.png" alt=" Yellow Crystal ">
-
-		<div>
-			<!-- Score Goes Here -->
 		</div>
 
-		<div>
-			<h2> Your Score Is: </h2>
-			<div id="playerScore">
-				<!-- This div will contain the score. -->
+		<div id="compRanNum">
+
+		</div>
+
+		<div id="winLossCounter">
+
+		</div>
+
+		<div id="crystals">
+
+			<img class="rupees" id="blueCrystal" src="assets/images/blueCrystal.png" alt=" Blue Crystal ">
+			<img class="rupees" id="greenCrystal" src="assets/images/greenCrystal.png" alt=" Green Crystal ">
+			<img class="rupees" id="purpleCrystal" src="assets/images/purpleCrystal.png" alt=" Purple Crystal ">
+			<img class="rupees" id="yellowCrystal" src="assets/images/yellowCrystal.png" alt=" Yellow Crystal ">
+
+			<div id="targetScore">
+				<!-- Score Goes Here -->
+				8888888888888888888888
 			</div>
-		</div>
 
-	</div>
+			<div>
+
+				<h2> Your Score Is: </h2>
+
+				<div id="playerScore">
+					<!-- This div will contain the score. -->
+
+
+					888888888888888888888
+
+
+				</div>
+
+			</div>
+
+		</div>
+	</div>	
 
 </body>
+
 </html>
