--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-	<title> Crystal Game | Eva King </title>
+	<title> Rupee Game | Eva King </title>
 	<script type="text/JavaScript" src="assets/javascript/jquery-3.2.1.js"></script>
 	<script type="text/JavaScript" src="assets/javascript/game.js"></script>
 	<link rel="stylesheetReset" type="text/css" href="assets/css/reset.css">
@@ -15,17 +15,18 @@
 
 <body>
 
-	<h1> Crystal Collector </h1>
-
 	<div class="mainDiv">
 
+	<h1> Rupee Collector </h1>
+	
 		<div id="instructions">
 
+			
 			<p> You will be given a random number at the start of the game. </p>
-			<p> There are four crystals below. By clicking on a crystal you will add a specific amount of points to your total score.</p>
+			<p> There are four rupees below. By clicking on a rupee you will add a specific amount of points to your total score.</p>
 			<p> You win the game by matching your total score to the random number assigned at the beginning of the game. You lose the game if your total score goes above the random number. </p>
-			<p> The value of each crystal is hidden. </p>
-			<p> Each time the game starts, the value of the each crystal will change to a new random number. </p>
+			<p> The value of each rupee is hidden. </p>
+			<p> Each time the game starts, the value of the each rupee will change to a new random number. </p>
 
 		</div>
 
@@ -37,12 +38,12 @@
 
 		</div>
 
-		<div id="crystals">
+		<div id="rupees">
 
-			<img class="rupees" id="blueCrystal" src="assets/images/blueCrystal.png" alt=" Blue Crystal ">
-			<img class="rupees" id="greenCrystal" src="assets/images/greenCrystal.png" alt=" Green Crystal ">
-			<img class="rupees" id="purpleCrystal" src="assets/images/purpleCrystal.png" alt=" Purple Crystal ">
-			<img class="rupees" id="yellowCrystal" src="assets/images/yellowCrystal.png" alt=" Yellow Crystal ">
+			<img class="rupees" id="blueRupee" src="assets/images/blueCrystal.png" alt=" Blue Rupee ">
+			<img class="rupees" id="greenRupee" src="assets/images/greenCrystal.png" alt=" Green rupee ">
+			<img class="rupees" id="purpleRupee" src="assets/images/purpleCrystal.png" alt=" Purple Rupee ">
+			<img class="rupees" id="yellowRupee" src="assets/images/yellowCrystal.png" alt=" Yellow Rupee ">
 
 			<div id="targetScore">
 				<!-- Score Goes Here -->
