--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
 	<div class="mainDiv">
 
-	<h1> Rupee Collector </h1>
-	
+		<h1> Rupee Collector </h1>
+
 		<div id="instructions">
 
-			
+
 			<p> You will be given a random number at the start of the game. </p>
 			<p> There are four rupees below. By clicking on a rupee you will add a specific amount of points to your total score.</p>
 			<p> You win the game by matching your total score to the random number assigned at the beginning of the game. You lose the game if your total score goes above the random number. </p>
@@ -40,10 +40,9 @@
 
 		<div id="rupees">
 
-			<img class="rupees" id="blueRupee" src="assets/images/blueCrystal.png" alt=" Blue Rupee ">
-			<img class="rupees" id="greenRupee" src="assets/images/greenCrystal.png" alt=" Green rupee ">
-			<img class="rupees" id="purpleRupee" src="assets/images/purpleCrystal.png" alt=" Purple Rupee ">
-			<img class="rupees" id="yellowRupee" src="assets/images/yellowCrystal.png" alt=" Yellow Rupee ">
+			<img class="rupees" id="blueRupee" src="assets/images/blueRupee.png" alt=" Blue Rupee ">
+			<img class="rupees" id="greenRupee" src="assets/images/greenRupee.png" alt=" Green rupee "> <img class="rupees" id="purpleRupee" src="assets/images/purpleRupee.png" alt=" Purple Rupee ">
+			<img class="rupees" id="yellowRupee" src="assets/images/yellowRupee.png" alt=" Yellow Rupee ">
 
 			<div id="targetScore">
 				<!-- Score Goes Here -->
@@ -66,7 +65,7 @@
 			</div>
 
 		</div>
-	</div>	
+	</div>
 
 </body>
 
