--- a/index.html
+++ b/index.html
@@ -76,13 +76,14 @@
 
 			playerScore += blueRupee;
 			$("#playerScore").text(playerScore);
-			
+			addedToScore(blueRupee);
 		});
 
 		$("#greenRupee").click(function(){
 
 			playerScore += greenRupee;
 			$("#playerScore").text(playerScore);
+			addedToScore(greenRupee);
 
 		});
 
@@ -90,6 +91,7 @@
 
 			playerScore += purpleRupee;
 			$("#playerScore").text(playerScore);
+			addedToScore(purpleRupee);
 
 		});
 
@@ -97,6 +99,7 @@
 
 			playerScore += yellowRupee;
 			$("#playerScore").text(playerScore);
+			addedToScore(yellowRupee);
 
 		});
 
